--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -12,6 +12,6 @@ jobs:
           repository: SolaceDev/solace-dev-codelabs-site
       - name: Deploy to Netlify
         uses: jsmrcaga/action-netlify-deploy@v1.2.0
-        env:
+        with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
