--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -10,6 +10,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: SolaceDev/solace-dev-codelabs-site
+      - name: ls
+        run: |
+          pwd
+          ls
       - name: Deploy to Netlify
         uses: jsmrcaga/action-netlify-deploy@v1.2.0
         with:
