--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -19,3 +19,4 @@ jobs:
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          build_directory: site
