--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -10,13 +10,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: SolaceDev/solace-dev-codelabs-site
-      - name: ls
-        run: |
-          pwd
-          ls
       - name: Deploy to Netlify
         uses: jsmrcaga/action-netlify-deploy@v1.2.0
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           build_directory: site
+          build_command: npm run serve
