--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -16,4 +16,8 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           build_directory: site
-          build_command: npm run serve
+          build_command: ls && npm run serve
+      - name: Env variables
+        run: |
+          echo ${{env.GITHUB_SHA}}
+          echo ${{env.GITHUB_REF}}
