--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -3,10 +3,6 @@ on:
   push: 
     branches: [ master ]
 
-defaults:
-  run:
-    working-directory: site
-
 jobs:
   Build_Preview:
     runs-on: ubuntu-latest
@@ -21,8 +17,4 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           build_directory: site
-          build_command: ls && npm run serve
-      - name: Env variables
-        run: |
-          echo ${{env.GITHUB_SHA}}
-          echo ${{env.GITHUB_REF}}
+          build_command: cd site && npm run serve
