--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -17,4 +17,4 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           build_directory: site
-          build_command: cd site && npm run serve
+          build_command: cd site && npm i && npm run serve
