--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: SolaceDev/solace-dev-codelabs-site
-      - name: Deploy to Netlify
-        uses: jsmrcaga/action-netlify-deploy@v1.2.0
+      - name: Netlify Actions
+        uses: nwtgck/actions-netlify@v1.1.7
         with:
+          publish-dir: 'site/dist'
+        env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          build_directory: site
-          build_command: cd site && npm i && npm run serve
