--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Netlify Actions
         uses: nwtgck/actions-netlify@v1.1.7
         with:
-          publish-dir: ${{github.action_path}}/site/dist
+          publish-dir: '${{github.action_path}}/site/dist'
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
