--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -19,5 +19,4 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
       - name: testing
-        run: |
-          cat ~/.netlify/config.json
+        run: cat ~/.netlify/config.json && ls
