--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -11,12 +11,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: SolaceDev/solace-dev-codelabs-site
-      - name: Netlify Actions
-        uses: nwtgck/actions-netlify@v1.1.7
-        with:
-          publish-dir: './solace-dev-codelabs-site/site/dist'
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      # - name: Netlify Actions
+      #   uses: nwtgck/actions-netlify@v1.1.7
+      #   with:
+      #     publish-dir: './solace-dev-codelabs-site/site/dist'
+      #   env:
+      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
       - name: testing
-        run: cat ~/.netlify/config.json && ls
+        run: ls
