--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -15,9 +15,7 @@ jobs:
         uses: nwtgck/actions-netlify@v1.1.7
         with:
           publish-dir: './site'
-          enable-pull-request-comment: true
-          deploy-message: "Deploy from GitHub Actions"
-          enable-commit-comment: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
