--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,11 +1,11 @@
-name: PR TEST
-on:
-  pull_request: 
-    branches: [ master ]
+# name: PR TEST
+# on:
+#   pull_request: 
+#     branches: [ master ]
 
-jobs:
-  Build_Preview:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout site repo
-        run: echo ${{ github.event.pull_request.number }}
+# jobs:
+#   Build_Preview:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout site repo
+#         run: echo ${{ github.event.pull_request.number }}
