--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -13,7 +13,7 @@ jobs:
           repository: SolaceDev/solace-dev-codelabs-site
           submodules: recursive
       - name: Commit the files
-      - run: |
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
