--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -14,11 +14,13 @@ jobs:
           submodules: recursive
       - name: Commit the files
         run: |
+          git submodule update --remote
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update submodule"
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
