--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -19,6 +19,7 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update submodule"
+          # git push https://${{ github.event.pull_request.number }}:${{ secrets.GITHUB_TOKEN }}@github.com/${REPOSITORY}.git HEAD:${INPUT_BRANCH} --follow-tags $_FORCE_OPTION $_TAGS;
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
