--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -14,10 +14,10 @@ jobs:
           submodules: recursive
       - name: Commit the files
         run: |
-          git status
           git submodule update --remote
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update submodule"
+          git remote -v
           git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git origin master
