--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -20,5 +20,4 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update submodule"
-          git push origin master
-          # git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/SolaceDev/solace-dev-codelabs-site.git HEAD:master
+          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/SolaceDev/solace-dev-codelabs-site.git HEAD:master
