--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           repository: SolaceDev/solace-dev-codelabs-site
           submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Commit the files
         run: |
           git reset --hard origin/master
@@ -20,4 +21,4 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update submodule"
-          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/SolaceDev/solace-dev-codelabs-site.git HEAD:master
+          git push 
