--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -22,4 +22,4 @@ jobs:
           git status
           git add .
           git commit -m "Update submodule"
-          # git push 
+          git push https://#{{secrets.API_TOKEN}}@github.com/SolaceDev/solace-dev-codelabs-site.git origin master
