--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Push the changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{secrets.API_TOKEN}}
+          github_token: ${{secrets.GITHUB_TOKEN}}
           repository: SolaceDev/solace-dev-codelabs-site
