--- a/.github/workflows/site-update.yml
+++ b/.github/workflows/site-update.yml
@@ -17,6 +17,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with: 
           key: ${{ secrets.SSH_KEY }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Update submodule
         run: |
           git submodule update --remote
