Update broken linik checker

--- a/.github/workflows/brokenlinks.yml
+++ b/.github/workflows/brokenlinks.yml
@@ -7,5 +7,5 @@ jobs:
   Broken_Link_Checker:
     runs-on: ubuntu-latest
     steps:
-      - name: Broken Link Check
-        uses: technote-space/broken-link-checker-action@v2
+    - uses: actions/checkout@master
+    - uses: gaurav-nelson/github-action-markdown-link-check@v1
