broken link action

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -1,7 +1,8 @@
 {
   "ignorePatterns": [
     {
-      "pattern": "solace-dev-samples"
+      "pattern": "/solace-dev-samples/g"
     }
-  ]
+  ],
+  "aliveStatusCodes": [400]
 }
