broken link action

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -1,8 +1,8 @@
 {
   "ignorePatterns": [
     {
-      "pattern": "/solace-dev-samples/g"
+      "pattern": "/\/solace-dev-samples\//g"
     }
   ],
-  "aliveStatusCodes": [400]
+  "aliveStatusCodes": [400, 200]
 }
