--- a/mlc_config.json
+++ b/mlc_config.json
@@ -1,7 +1,7 @@
 {
   "ignorePatterns": [
     {
-      "pattern": "/\/solace-dev-samples\//g"
+      "pattern": "/solace-dev-samples/gm"
     }
   ],
   "aliveStatusCodes": [400, 200]
