--- a/.github/workflows/fullbrokenlink.yml
+++ b/.github/workflows/fullbrokenlink.yml
@@ -16,8 +16,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-        npm install
-        npm run build
+        # npm install
+        # npm run build
+        node -v
+        pwd
+        ls
 
       - name: Check broken links in html files
         uses: ruzickap/action-my-broken-link-checker@v1
