--- a/lychee.toml
+++ b/lychee.toml
@@ -50,7 +50,7 @@ headers = []
 ### Exclusions
 ###
 # Exclude URLs from checking (supports regex)
-exclude = ["data:image/*", "*googletagmanager*", "*w3*"]
+exclude = ["data:image/*", "*/googletagmanager/*", "*/w3/*"]
 
 include = []
 
