--- a/.github/workflows/fullbrokenlink.yml
+++ b/.github/workflows/fullbrokenlink.yml
@@ -12,7 +12,7 @@ jobs:
         uses: lycheeverse/lychee-action@v1.0.7
         id: lychee
         with:
-          args: https://www.solace.dev/
+          args: https://www.tutorials.solace.dev/
       - name: Create Issue From File
         uses: peter-evans/create-issue-from-file@v2
         with:
