--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -2,10 +2,10 @@ name: PR Comment
 on:
   pull_request: 
     branches: [ master ]
-
+    
 jobs:
-  pr-comment:
-    name: Add guidelines comment
+  comment:
+    name: Add checkout and pull commands
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -13,4 +13,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
-          filename: comment.md
+          filename: template.md
