--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -18,6 +18,5 @@ jobs:
 
             1. The commit number in the [gatsby-config.js](https://github.com/SolaceDev/solace-dev-tutorials/blob/master/gatsby-config.js) file
             1. Update the lines of code referenced in `src/pages/tutorials/{language}/{tutorial.md}` file in the `embed:{Lang}-Samples/{path/to/file}#L{start_line}-{end_line}` section
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
-          allow-repeats: false # This is the default
+          repo-token: ${{ secrets.PAT }}
+          # repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
