--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -1,14 +1,16 @@
-name: PR Comment
 on:
   pull_request:
 
 jobs:
-  pr-comment:
-    name: Add guidelines comment
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: mshick/add-pr-comment@v1
         with:
           message: |
-            test
+            **Hello**
+            🌏
+            !
           repo-token: ${{ secrets.PAT }}
+          repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
+          allow-repeats: false # This is the default
