--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -4,20 +4,21 @@ on:
     branches: [ master ]
 
 jobs:
-  context:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
-  validate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: validate asyncapi spec file
+
+      - name: Checkout Current Branch
+        uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Validate asyncapi spec file
         run: echo "validating file"
-  checkmode-import:
-    runs-on: ubuntu-latest
-    steps:
-      - name: attempt an import to EP
+
+      - name: Attempt an import to EP
         run: echo "attempting to import the file to EP"
