--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -51,9 +51,9 @@ jobs:
           script: |
               core.setFailed('Invalid asyncAPI file')
               
-      - name: Cancel Workflow if no asyncAPI file present in PR
-        if: env.ASYNCAPI_FILE_PATH == 'none' 
-        uses: andymckay/cancel-action@0.2
+      # - name: Cancel Workflow if no asyncAPI file present in PR
+      #   if: env.ASYNCAPI_FILE_PATH == 'none' 
+      #   uses: andymckay/cancel-action@0.2
 
       # Import spec file to EP in checkmode
       - name: Attempt an import to EP
