--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -8,7 +8,37 @@ env:
   CANCEL_WORKFLOW: 'true'
 
 jobs:
+  asyncapi-present:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          CONTEXT: ${{toJson(github)}}
+        run: | 
+          echo "Repo --> ${{ github.repository }}"
+          echo "REPO_BRANCH --> ${{ github.base_ref }}"
+          echo "$CONTEXT"
+          
+    # Get all files in commit
+      - id: async_spec_present
+        uses: jitterbit/get-changed-files@v1
+
+      - name: Check if AsycnAPI file in commit
+        run: |
+          for changed_file in ${{ steps.async_spec_present.outputs.all }}; do
+            asyncapi validate ${changed_file} &>> output.txt
+
+            if grep -q "successfully validated!" "output.txt"; then
+              export ASYNCAPI_FILE_PATH=${changed_file}
+              export CANCEL_WORKFLOW='false'
+            fi
+          done
+      - name: Cancel Workflow if no asyncAPI file present in PR
+        if: env.CANCEL_WORKFLOW == 'true' 
+        uses: andymckay/cancel-action@0.2
+
   import-asyncapi-file:
+    needs: asyncapi-present
     runs-on: ubuntu-latest
     steps:
       - name: Import AsyncAPI spec file to EP
@@ -25,31 +55,11 @@ jobs:
   
   # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
   trigger-jenkins:
-    needs: import-asyncapi-file
+    needs: asyncapi-present
     runs-on: ubuntu-latest
     steps:
       - name: Install asycnapi cli
         run: npm install -g @asyncapi/cli 
-
-    # Get all files in commit
-      - id: async_spec_present
-        uses: jitterbit/get-changed-files@v1
-
-    # Check if AsyncAPI file in commit. If present, trigger Jenkins job with asycnAPI file
-      - name: Check if AsycnAPI file in commit
-        run: |
-          for changed_file in ${{ steps.async_spec_present.outputs.all }}; do
-            asyncapi validate ${changed_file} &>> output.txt
-
-            if grep -q "successfully validated!" "output.txt"; then
-              export ASYNCAPI_FILE_PATH=${changed_file}
-              export CANCEL_WORKFLOW='false'
-            fi
-          done
-      
-      - name: Cancel Workflow if no asyncAPI file present in PR
-        if: env.CANCEL_WORKFLOW == 'true' 
-        uses: andymckay/cancel-action@0.2
 
       - name: REST call to Jenkins
         uses: fjogeleit/http-request-action@v1
