--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -15,8 +15,7 @@ jobs:
         env:
           CONTEXT: ${{toJson(github)}}
         run: | 
-          echo "Repo:"
-          echo "$CONTEXT | jq -r '.event.base.repo.html_url' "
+          echo "Repo: ${{github.event.repository.html_url}}"
       
       - name: Install asycnapi cli
         run: npm install -g @asyncapi/cli 
@@ -68,4 +67,4 @@ jobs:
           username: ${{ secrets.JENKINS_USER }}
           password: ${{ secrets.JENKINS_PASSWORD }}
           customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
-          data: '{"REPO_HTTP_URL": ${{ github.event.base.repo.html_url }}, "REPO_BRANCH": ${{ github.ref_name}}, "ASYNCAPI_FILE": ${{env.ASYNCAPI_FILE_PATH}}, "BUILD_ENV": "test"}'
+          data: '{"REPO_HTTP_URL": ${{ github.event.repository.html_url }}, "REPO_BRANCH": ${{ github.ref_name}}, "ASYNCAPI_FILE": ${{env.ASYNCAPI_FILE_PATH}}, "BUILD_ENV": "test"}'
