--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -5,10 +5,35 @@ on:
 
 env:
   ASYNCAPI_FILE_PATH: 'none'
-
+  CANCEL_WORKFLOW: 'true'
 jobs:
+  asyncapi-present:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install asycnapi cli
+        run: npm install -g @asyncapi/cli 
+          
+    # Get all files in commit
+      - id: files
+        uses: jitterbit/get-changed-files@v1
+
+      - name: Check if AsycnAPI file in commit
+        run: |
+          for changed_file in ${{ steps.files.outputs.all }}; do
+            asyncapi validate ${changed_file} &>> output.txt
+
+            if grep -q "successfully validated!" "output.txt"; then
+              export ASYNCAPI_FILE_PATH=${changed_file}
+              export CANCEL_WORKFLOW='false'
+            fi
+          done
+      - name: Cancel Workflow if no asyncAPI file present in PR
+        if: env.CANCEL_WORKFLOW == 'true' 
+        uses: andymckay/cancel-action@0.2
+
   validate-asyncapi:
     runs-on: ubuntu-latest
+    needs: asyncapi-present
     steps:
 
       - name: Checkout Current Branch
@@ -21,33 +46,6 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       
-      - name: Install asycnapi cli
-        run: npm install -g @asyncapi/cli 
-
-      # Get all files in PR
-      - id: async_spec_present
-        uses: jitterbit/get-changed-files@v1
-
-      # Check if AsyncAPI file in PR. If present, validate it
-      - name: Validate asyncapi spec file
-        run: |
-          for changed_file in ${{ steps.async_spec_present.outputs.all }}; do
-            asyncapi validate ${changed_file} &>> output.txt
-            
-            if grep -q "ValidationError" "output.txt"; then
-              echo "Invalid AsyncAPI file"
-              exit 1
-            fi
-
-            if grep -q "successfully validated!" "output.txt"; then
-              export ASYNCAPI_FILE_PATH=${changed_file}
-            fi
-          done
-
-      - name: Cancel Workflow if no asyncAPI file present in PR
-        if: env.ASYNCAPI_FILE_PATH == 'none' 
-        uses: andymckay/cancel-action@0.2
-
       # Import spec file to EP in checkmode
       - name: Attempt an import to EP
         run: echo "attempting to import the file to EP"
