--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -4,7 +4,6 @@ on:
     branches: [ master ]
 
 env:
-  ASYNCAPI_FILE_PATH: 'none'
   CANCEL_WORKFLOW: 'true'
 jobs:
   asyncapi-present:
@@ -19,14 +18,16 @@ jobs:
 
       - name: Check if AsycnAPI file in commit
         run: |
-          for changed_file in ${{ steps.files.outputs.all }}; do
+          for changed_file in ${{ steps.files.outputs.all }}; dos
             asyncapi validate ${changed_file} &>> output.txt
 
             if grep -q "successfully validated!" "output.txt"; then
-              export ASYNCAPI_FILE_PATH=${changed_file}
               export CANCEL_WORKFLOW='false'
             fi
           done
+      - name: Should cancel?
+        run: echo "$CANCEL_WORKFLOW"
+        
       - name: Cancel Workflow if no asyncAPI file present in PR
         if: env.CANCEL_WORKFLOW == 'true' 
         uses: andymckay/cancel-action@0.2
