--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -16,18 +16,26 @@ jobs:
       - id: files
         uses: jitterbit/get-changed-files@v1
 
-      - name: Check if AsycnAPI file in commit
+      - name: Check if an AsycnAPI file is in commit
         run: |
-          for changed_file in ${{ steps.files.outputs.all }}; do
-            asyncapi validate ${changed_file} &>> output.txt
-
-            if grep -q "successfully validated!" "output.txt"; then
-              echo "YOLO"
-              echo "CANCEL_WORKFLOW=false" >> $GITHUB_ENV
+          asyncapiFiles=()
+          for changed_file in ${{ steps.files.outputs.all }}
+          do
+            if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml ) || ( ${changed_file} == *.json ) ]]
+            then
+              asyncapi validate ${changed_file} &> check.txt
+              # Check if the file is an asyncapi spec
+              if grep -q -v "missing" "check.txt"; then
+                asyncapiFiles+=("$changed_file")
+              fi
             fi
           done
+
+          if [ ${#asyncapiFiles[@]} -eq 0 ]; then
+            echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
+          fi
       - name: Should cancel?
-        run: echo "$CANCEL_WORKFLOW"
+        run: echo "${{env.CANCEL_WORKFLOW}}"
 
       - name: Cancel Workflow if no asyncAPI file present in PR
         if: env.CANCEL_WORKFLOW == 'true' 
@@ -47,6 +55,29 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+
+      - name: Install asycnapi cli
+        run: npm install -g @asyncapi/cli@0.22.2
+
+      # Get all files in PR
+      - id: async_spec_present
+        uses: jitterbit/get-changed-files@v1
+
+      # Check if AsyncAPI file in PR. If present, validate it
+      - name: Validate asyncapi spec file
+        run: |
+          asyncapiFiles=()
+          for changed_file in ${{ steps.async_spec_present.outputs.all }}
+          do
+            if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml ) || ( ${changed_file} == *.json ) ]]
+            then
+              asyncapi validate ${changed_file} &> check.txt
+              # Check if the file is an asyncapi spec
+              if grep -q -v "missing" "check.txt"; then
+                asyncapiFiles+=("$changed_file")
+              fi
+            fi
+          done
       
       # Import spec file to EP in checkmode
       - name: Attempt an import to EP
