--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
 
 env:
-  CANCEL_WORKFLOW: 'true'
+  CANCEL_WORKFLOW: 'false'
 jobs:
   asyncapi-present:
     runs-on: ubuntu-latest
