--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   ASYNCAPI_FILE_PATH: 'none'
-  CANCEL_WORKFLOW: 'false'
+  CANCEL_WORKFLOW: false
 
 jobs:
   asyncapi-present:
@@ -33,14 +33,14 @@ jobs:
             fi
           done
 
+          echo "YOLO files $asyncapiFiles"
+
           if [ ${#asyncapiFiles[@]} -eq 0 ]; then
             echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
           fi
-      - name: Should cancel?
-        run: echo "${{env.CANCEL_WORKFLOW}}"
 
       - name: Cancel Workflow if no asyncAPI file present in PR
-        if: env.CANCEL_WORKFLOW == 'true' 
+        if: env.CANCEL_WORKFLOW
         uses: andymckay/cancel-action@0.2
 
   import-asyncapi-file:
