--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
 
 env:
-  CANCEL_WORKFLOW: 'false'
+  CANCEL_WORKFLOW: false
 jobs:
   asyncapi-present:
     runs-on: ubuntu-latest
@@ -34,11 +34,9 @@ jobs:
           if [ ${#asyncapiFiles[@]} -eq 0 ]; then
             echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
           fi
-      - name: Should cancel?
-        run: echo "${{env.CANCEL_WORKFLOW}}"
 
       - name: Cancel Workflow if no asyncAPI file present in PR
-        if: env.CANCEL_WORKFLOW == 'true' 
+        if: env.CANCEL_WORKFLOW
         uses: andymckay/cancel-action@0.2
 
   validate-asyncapi:
