--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -29,6 +29,8 @@ jobs:
               asyncapi validate ${changed_file} &> check.txt
               # Check if the file is an asyncapi spec
 
+              cat check.txt
+
               if ! grep -q "field is missing." check.txt; then
                 asyncapiFiles+=("$changed_file")
                 echo "This is an asyncapi file"
