--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -11,6 +11,11 @@ jobs:
   asyncapi-present:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Current Branch
+        uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
+            
       - name: Install asycnapi cli
         run: npm install -g @asyncapi/cli 
           
