--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -7,38 +7,44 @@ env:
   CANCEL_WORKFLOW: false
 jobs:
   asyncapi-present:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install asycnapi cli
-        run: npm install -g @asyncapi/cli 
-          
-    # Get all files in commit
-      - id: files
-        uses: jitterbit/get-changed-files@v1
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Current Branch
+          uses: actions/checkout@master
+          with:
+            ref: ${{ github.ref }}
+              
+        - name: Install asycnapi cli
+          run: npm install -g @asyncapi/cli 
+            
+      # Get all files in commit
+        - id: files
+          uses: jitterbit/get-changed-files@v1
 
-      - name: Check if an AsycnAPI file is in commit
-        run: |
-          asyncapiFiles=()
-          for changed_file in ${{ steps.files.outputs.all }}
-          do
-            if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml ) || ( ${changed_file} == *.json ) ]]
-            then
-              asyncapi validate ${changed_file} &> check.txt
-              # Check if the file is an asyncapi spec
-              if ! grep -q "field is missing." check.txt; then
-                asyncapiFiles+=("$changed_file")
+        - name: Check if an AsycnAPI file is in commit
+          run: |
+            asyncapiFiles=()
+            for changed_file in ${{ steps.files.outputs.all }}
+            do
+              if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml ) || ( ${changed_file} == *.json ) ]]
+              then
+                asyncapi validate ${changed_file} &> check.txt
+                # Check if the file is an asyncapi spec
+                if ! grep -q "field is missing." check.txt; then
+                  asyncapiFiles+=("$changed_file")
+                  echo "This is an asyncapi file"
+                fi
               fi
+            done
+            if [ ${#asyncapiFiles[@]} -eq 0 ]; then
+              echo "Cancel workflow. No file found!"
+              echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
             fi
-          done
 
-          if [ ${#asyncapiFiles[@]} -eq 0 ]; then
-            echo "CANCEL_WORKFLOW=true" >> $GITHUB_ENV
-          fi
-
-      - name: Cancel Workflow if no asyncAPI file present in PR
-        if: env.CANCEL_WORKFLOW
-        uses: andymckay/cancel-action@0.2
-
+        - name: Cancel Workflow if no asyncAPI file present in PR
+          if: env.CANCEL_WORKFLOW == 'true'
+          uses: andymckay/cancel-action@0.2
+  
   validate-asyncapi:
     runs-on: ubuntu-latest
     needs: asyncapi-present
@@ -61,8 +67,8 @@ jobs:
       - id: async_spec_present
         uses: jitterbit/get-changed-files@v1
 
-      # Check if AsyncAPI file in PR. If present, validate it
-      - name: Validate asyncapi spec file
+      # Validate AsyncAPI file
+      - name: Validate asyncapi spec file using OS validator
         run: |
           asyncapiFiles=()
           for changed_file in ${{ steps.async_spec_present.outputs.all }}
@@ -71,8 +77,8 @@ jobs:
             then
               asyncapi validate ${changed_file} &> check.txt
               # Check if the file is an asyncapi spec
-              if grep -q -v "missing" "check.txt"; then
-                asyncapiFiles+=("$changed_file")
+              if grep -q -v "ValidationError" "check.txt"; then
+                exit 1
               fi
             fi
           done
